[package]
name = "mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
rumqttc = { version = "0.21", features = ["url", "default"]}
confy =  "0.5"
eyre = "0.6"
serde = { version = "1", features = ["derive"] }
log = "0.4"
fern = "0.6"
humantime = "2.1.0"
ciborium = "0.2"
ed25519-dalek = { version = "=2.0.0-rc.2" }
blake2 = { version = "0.10" }
ssh-key = { version = "0.6.0-rc.0", features = ["ed25519"]}
dashmap = "5.4"
thiserror = "1"
chrono = "0.4"
