[package]
name = "mls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Error handling
thiserror = "1"
eyre = "0.6"
# Time libs
chrono = "0.4"
humantime = "2.1.0"
#Logging
log = "0.4"
fern = "0.6"
#Config libs
confy =  "0.5"
# Async
tokio = {version = "1", features = ["full"] }
#MQTT
rumqttc = { version = "0.21", features = ["url", "default"]}
# Data Serialization
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
#crypto
ed25519-dalek = { version = "=2.0.0-rc.3" }
blake2 = { version = "0.10" }
ssh-key = { version = "0.6.0-rc.0", features = ["ed25519"]}
#labeldb
sequence_trie = "0.3"
clap = { version = "4.3.10", features = ["derive"] }
